--- a/Configuration/TCAFE/readme.yaml
+++ b/Configuration/TCAFE/readme.yaml
@@ -1,25 +1,71 @@
-# non lisible dans le BE
-table: fe_users
-list:
-  fluidVariableName: 'users'
-  templateName: 'EXT:toto/Resources/Private/Templates/UserList.html'
-  fields:
-    first_name:
-      label: Test
-    last_name:
-      label: Name
-      crop:
-        maxCharacters: 2
 
-    username:
-      label: Username
-    usergroup:
-      label: Groups
-#    sexe:
-#      label: Sexe
-#      options:
-#        0: Feminin
-#        1: Masculin
-detail:
-  pid: 123
-  tcaType: fe
+# doc https://docs.ansible.com/ansible/latest/reference_appendices/YAMLSyntax.html
+# test online https://yaml-online-parser.appspot.com/
+
+---
+table:
+  fe_users:
+    name: Users # default table name
+    label: The users # default TCA
+    query: # default TCA
+      and: pid=2
+
+    actions :
+      list:
+        # default ../Table.name/Action.html
+        templatePath: 'EXT:toto/Resources/Private/Templates/Users/List.html'
+        pid: 123456
+        default:
+          sort:
+            by: username # see TCA
+            direction: ASC
+
+        filters: # OR FLUID ??
+          activ: 0
+            fields:
+              - input:
+                  label: Rechercher
+                  searchInfields:
+                    - username:
+                        rules: *
+                        condition: and # and/or default or
+                    - first_name:
+                        rules: *
+              - select:
+                  facetedMode: 1
+                  searchInfield: username
+              - radio:
+                  facetedMode: 1
+                  searchInfield: username
+              - checkBox:
+                  facetedMode: 1
+                  searchInfield: username
+
+        pagination: # default TCA # OR FLUID ??
+          activ: 0 # default 1
+
+        infos: # OR FLUID ??
+          activ: 0 # default 1
+          label: Informations
+
+        fields:
+          - first_name:
+              label: Test
+          - last_name:
+              label: Name
+              crop:
+                maxCharacters: 2
+
+          - username:
+              label: Username
+          - usergroup:
+              label: Groups
+      #    sexe:
+      #      label: Sexe
+      #      options:
+      #        0: Feminin
+      #        1: Masculin
+      detail:
+        pid: 123
+        tcaType: fe
+...
