[TASK] tests news

--- a/Configuration/TCAFE/test.yaml
+++ b/Configuration/TCAFE/test.yaml
@@ -5,6 +5,8 @@ list:
 #  fluidVariableName: users
 #  templateName: 'EXT:vd_base/Resources/Private/Templates/UserList.html'
   additionnalWhereClause: ''
+  showMoreLabel: En savoir plus
+
   filters:
     inputSearch:
       type: Input
