--- a/Configuration/TCAFE/test.yaml
+++ b/Configuration/TCAFE/test.yaml
@@ -2,7 +2,7 @@
 table: fe_users
 storagePid: 7
 list:
-#  fluidVariableName: users
+fluidVariableName: users
 #  templateName: 'EXT:vd_base/Resources/Private/Templates/UserList.html'
   additionnalWhereClause: ''
   showMoreLabel: En savoir plus
