[TASK] Code cleanup

--- a/Configuration/TCAFE/be.yaml
+++ b/Configuration/TCAFE/be.yaml
@@ -1,30 +1,27 @@
-# non lisible dans le BE
 table: fe_users
 storagePid: 7
 list:
-  showMoreLabel: En savoir plus
-  filterSubmitLabel: Rechercher
   filters:
-    inputSearch:
+    -
       type: Input
       fields: 'first_name,last_name,username'
       label: Rechercher
       placeholder: Rechercher
-    checkboxSexe:
+    -
       type: Checkbox
       field: sexe
       items:
         0: Masculin
         1: Feminin
-    selectGroup:
+    -
       type: Select
       field: usergroup
       foreignFields: first_name, last_name
       excludeNonUsedValues: true
       displayCount: true
-      whereClause: 'pid=7'
+      additionalWhereClause: 'pid=7'
       multi: true
-    selectSingle3:
+    -
       type: Select
       field: select_single_3
       items:
@@ -57,5 +54,7 @@ list:
           label: Date de création
         title:
           label: Nom du groupe
+  pagination:
+    itemsPerPage: 10
 detail:
   pid: 123
