--- a/Configuration/TCAFE/tx_tcafe_record.yaml
+++ b/Configuration/TCAFE/tx_tcafe_record.yaml
@@ -27,6 +27,11 @@ list:
     url:
     tstamp:
     pid:
+    select_single_static:
+    select_singlebox_static:
+    select_checkbox_static:
+    select_multiplesidebyside_static:
+    radio_static:
     relation_csv:
       fields:
         pid:
