--- a/Configuration/TCAFE/tx_tcafe_record.yaml
+++ b/Configuration/TCAFE/tx_tcafe_record.yaml
@@ -27,6 +27,11 @@ list:
     url:
     tstamp:
     pid:
+    checkbox_static_bool:
+      items:
+        0: Non
+        1: Oui
+    checkbox_static:
     select_single_static:
     select_singlebox_static:
     select_checkbox_static:
