[TASK] Handle simple csv relation

--- a/Configuration/TCAFE/fe_users.yaml
+++ b/Configuration/TCAFE/fe_users.yaml
@@ -7,19 +7,20 @@ list:
   filters:
     -
       type: Input
-      fields: 'first_name,last_name,username'
+      fields: first_name,last_name,username
       label: Rechercher
       placeholder: Rechercher
     -
       type: Select
       field: usergroup
-      foreignFieldsLabel: first_name, last_name
+      foreignFieldsLabel: title
+      defaultSelectLabel: Selectionner une valeur...
       displayCount: true
-      additionalWhereClause: 'pid=7'
       multi: true
     -
       type: Select
       field: select_single_3
+      defaultSelectLabel: Selectionner une valeur...
   fields:
     first_name:
       label: Test
