[TASK] Add new sorting parameter for RelationViewHelper that allows data to be sorted in the foreign table

--- a/Configuration/TCAFE/tx_tcafe_record.yaml
+++ b/Configuration/TCAFE/tx_tcafe_record.yaml
@@ -53,18 +53,21 @@ list:
       fields:
         title:
     relation_from:
-        fields:
-          title:
+      fields:
+        title:
     relation_categories:
-        fields:
-          title:
+      fields:
+        title:
+      sorting:
+        field: title
+        order: ASC
     relation_many:
-        fields:
-          title:
+      fields:
+        title:
     relation_inline:
-        fields:
-          title:
-          relation_fal:
+      fields:
+        title:
+        relation_fal:
     relation_fal:
       mediaWidth: 160c
       mediaHeight: 90c
