[TASK] It is now allowed to use environment variables in YAML configuration file - format: '%env(MY_ENV_VAR)%'

--- a/Configuration/TCAFE/tx_tcafe_record.yaml
+++ b/Configuration/TCAFE/tx_tcafe_record.yaml
@@ -2,7 +2,7 @@ table: tx_tcafe_record
 # cbt
 # storagePids: 25
 # jlt
-storagePids: 13
+storagePids: '%env(STORAGE_PID)%'
 list:
   filters:
     -
