[TASK] some fix

--- a/Configuration/TCAFE/tx_tcafe_record.yaml
+++ b/Configuration/TCAFE/tx_tcafe_record.yaml
@@ -1,6 +1,8 @@
 table: tx_tcafe_record
-storagePids: 25
+storagePids: 13
 list:
+  fluidVariableName: users
+  templateName: 'EXT:vd_base/Resources/Private/Templates/UserList.html'
   filters:
     -
       type: Input
