[TASK] remove reference to external extension, fix Name to Path

--- a/Configuration/TCAFE/fe_users_custom.yaml
+++ b/Configuration/TCAFE/fe_users_custom.yaml
@@ -2,7 +2,7 @@
 table: fe_users
 list:
   fluidVariableName: users
-  templateName: 'EXT:vd_base/Resources/Private/Templates/UserList.html'
+  templatePath: 'EXT:tcafe/Resources/Private/Templates/UserList.html'
   fields:
     first_name:
       label: Test
