[TASK] tcafe demo and readme

--- a/Configuration/TCAFE/tx_tcafe_record.yaml
+++ b/Configuration/TCAFE/tx_tcafe_record.yaml
@@ -1,8 +1,8 @@
 table: tx_tcafe_record
 storagePids: 13
 list:
-  fluidVariableName: users
-  templatePath: 'EXT:tcafe/Resources/Private/Templates/UserList.html'
+  fluidVariableName: tcafe
+  templatePath: 'EXT:tcafe/Resources/Private/Templates/TcafeList.html'
   filters:
     -
       type: Input
